--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,7 +114,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:text="Stock: 9"
+                    android:text="Stock: 10"
                     android:textColor="#FFFFFFFF"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -129,8 +129,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="#ffffff"
-        app:itemRippleColor="#673AB7"
-        app:itemTextColor="#3F51B5"
+        app:itemIconSize="40dp"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="#000000"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:menu="@menu/bottom_navigation_menu" />
