--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,18 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home"
-        android:title="Home" />
-    <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search"
-        android:title="Medicamento" />
+        android:icon="@drawable/baseline_home_24"
+        android:title="Inicio"/>
+    <item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/baseline_healing_24"
+        android:title="Medicamentos" />
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/baseline_person_24"
         android:title="Perfil" />
-    <item
-        android:id="@+id/navigation_more"
-        android:icon="@drawable/ic_more"
-        android:title="Mis Doctores" />
 </menu>
