--- a/app/src/main/res/layout/alta_medicamentos.xml
+++ b/app/src/main/res/layout/alta_medicamentos.xml
@@ -88,7 +88,7 @@
             android:id="@+id/editTextNumber2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@drawable/redondeado"
             android:ems="10"
             android:inputType="number"
             android:padding="10dp" />
@@ -105,7 +105,7 @@
             android:id="@+id/editTextNumber3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@drawable/redondeado"
             android:ems="10"
             android:inputType="number"
             android:padding="10dp" />
