Agrego botón Log Out en Perfil y su funcionalidad

--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -77,13 +77,14 @@
             android:text="EjemploDeApellido"
             android:textColor="#000000"
             android:textSize="24sp" />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearLayout2">
@@ -102,6 +103,15 @@
             android:text="CODEID1234"
             android:textColor="#000000"
             android:textSize="40sp" />
+
+        <Button
+            android:id="@+id/logOutBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LogOut">
+
+        </Button>
+
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
