--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -79,6 +79,7 @@
             </EditText>
 
             <Button
+                android:id="@+id/logInBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -119,7 +120,6 @@
                 android:textColor="#54CAE3"
                 android:textSize="20sp"
                 android:layout_gravity="bottom"
-                android:onClick="registrarse"
                 />
 
         </LinearLayout>
