--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -19,7 +19,6 @@
             android:layout_height="43dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_weight="1"
             android:background="@null"
             android:onClick="atras"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,56 +68,57 @@
                 android:id="@+id/nombre"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
-                android:hint="  nombre"
-                android:textColorHint="@color/material_dynamic_neutral30"
-                android:textColor="@color/material_dynamic_neutral30"
-                android:textSize="25sp"
-                android:background="@drawable/redondeado"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
-            </EditText>
+                android:background="@drawable/redondeado"
+                android:hint="Nombre"
+                android:paddingStart="10dp"
+                android:textColor="@color/material_dynamic_neutral30"
+                android:textColorHint="@color/material_dynamic_neutral30"
+                android:textSize="25sp" />
 
             <EditText
                 android:id="@+id/apellido"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
-                android:hint="  apellido"
-                android:textColorHint="@color/material_dynamic_neutral30"
-                android:textColor="@color/material_dynamic_neutral30"
-                android:textSize="25sp"
-                android:background="@drawable/redondeado"
                 android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
-            </EditText>
+                android:background="@drawable/redondeado"
+                android:hint="Apellido"
+                android:paddingStart="10dp"
+                android:textColor="@color/material_dynamic_neutral30"
+                android:textColorHint="@color/material_dynamic_neutral30"
+                android:textSize="25sp" />
 
             <EditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
-                android:hint="  e-mail"
-                android:textColorHint="@color/material_dynamic_neutral30"
-                android:textColor="@color/material_dynamic_neutral30"
-                android:textSize="25sp"
-                android:background="@drawable/redondeado"
                 android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
-            </EditText>
+                android:background="@drawable/redondeado"
+                android:hint="e-mail"
+                android:paddingStart="10dp"
+                android:textColor="@color/material_dynamic_neutral30"
+                android:textColorHint="@color/material_dynamic_neutral30"
+                android:textSize="25sp" />
 
             <EditText
                 android:id="@+id/contra"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
-                android:hint="  contraseña"
-                android:textColorHint="@color/material_dynamic_neutral30"
-                android:textColor="@color/material_dynamic_neutral30"
-                android:textSize="25sp"
-                android:background="@drawable/redondeado"
                 android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
-            </EditText>
+                android:background="@drawable/redondeado"
+                android:hint="Contraseña"
+                android:inputType="textPassword"
+                android:paddingStart="10dp"
+                android:textColor="@color/material_dynamic_neutral30"
+                android:textColorHint="@color/material_dynamic_neutral30"
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/registrarBtn"
@@ -127,6 +127,7 @@
                 android:layout_marginTop="30dp"
                 android:text="Registrarse"
                 android:layout_gravity="center"
+                android:onClick="registrarse"
                 android:backgroundTint="#46A2AE">
             </Button>
 
