--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,7 +6,8 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/medical_pill_outline"
-        android:title="Medicamentos" />
+        android:title="Medicamentos"
+        />
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_person_24"
