--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,82 +45,11 @@
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:baselineAligned="false"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginBottom="1dp"
-                    android:text="8:00"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="34sp" />
-
-                <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginBottom="5dp"
-                    android:text="Martes"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:text="12 Abril 20203"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="3dp"
-                android:layout_height="98dp"
-                android:background="#54CAE3" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/medicamento1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="Medicamento1"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:text="Stock: 10"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-        </LinearLayout>
-
+            android:layout_height="match_parent" />
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
