--- a/app/src/main/res/layout/detalle_medicamentos.xml
+++ b/app/src/main/res/layout/detalle_medicamentos.xml
@@ -66,7 +66,7 @@
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/nombreDetalle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="MEDICAMENTO1"
@@ -74,23 +74,40 @@
             android:textSize="40sp" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cantidad:"
+            android:layout_weight="1"
+            android:text="Dosis"
             android:textColor="#000000"
             android:textSize="15sp" />
 
-        <com.google.android.material.textfield.TextInputLayout
+        <TextView
+            android:id="@+id/dosisDetalle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="1"
+            android:textColor="#FFFFFF"
+            android:textSize="40sp" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:inputType="number" />
-        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Stock:"
+            android:textColor="#000000"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/stockDetalle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="23"
+            android:textColor="#FFFFFF"
+            android:textSize="40sp" />
+
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
