--- a/app/src/main/res/layout/detalle_medicamentos.xml
+++ b/app/src/main/res/layout/detalle_medicamentos.xml
@@ -108,6 +108,12 @@
             android:textColor="#FFFFFF"
             android:textSize="40sp" />
 
+        <Button
+            android:id="@+id/editarBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Editar" />
+
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
