--- a/app/src/main/res/layout/activity_lista_medicamentos.xml
+++ b/app/src/main/res/layout/activity_lista_medicamentos.xml
@@ -43,17 +43,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="90dp"
+        android:layout_marginBottom="75dp"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Lista de productos"
-            android:textColor="#FFFFFF"
-            android:textSize="24sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -75,7 +67,8 @@
             android:backgroundTint="#2196F3"
             android:text="+"
             android:textColor="#FFFFFF"
-            android:textSize="34sp" />
+            android:textSize="34sp"
+            android:onClick="showAlta"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
