--- a/app/src/main/res/layout/activity_lista_medicamentos.xml
+++ b/app/src/main/res/layout/activity_lista_medicamentos.xml
@@ -66,7 +66,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/floatingButton"
+            android:id="@+id/altaMedicamento_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
