--- a/app/src/main/res/layout/alta_medicamentos.xml
+++ b/app/src/main/res/layout/alta_medicamentos.xml
@@ -8,7 +8,7 @@
     android:background="@color/fondo">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/backButton"
         android:layout_width="48dp"
         android:layout_height="43dp"
         android:layout_marginStart="10dp"
@@ -56,10 +56,10 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton">
+        app:layout_constraintTop_toBottomOf="@+id/backButton">
 
         <TextView
             android:id="@+id/textView9"
@@ -160,21 +160,6 @@
             </FrameLayout>
 
         </LinearLayout>
-
-
     </LinearLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="#ffffff"
-        app:itemIconSize="40dp"
-        app:itemIconTint="@color/black"
-        app:itemTextColor="#000000"
-        app:labelVisibilityMode="labeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
