--- a/app/src/main/res/layout/detalle_medicamentos.xml
+++ b/app/src/main/res/layout/detalle_medicamentos.xml
@@ -7,7 +7,7 @@
     android:background="@color/fondo">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/backButton"
         android:layout_width="48dp"
         android:layout_height="43dp"
         android:layout_marginStart="10dp"
