--- a/app/src/main/res/layout/alta_medicamentos.xml
+++ b/app/src/main/res/layout/alta_medicamentos.xml
@@ -133,16 +133,12 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/editTextTime"
+            <TimePicker
+                android:id="@+id/timePicker"
                 android:layout_width="wrap_content"
-                android:layout_height="59dp"
-                android:layout_marginEnd="20dp"
-                android:layout_weight="0"
-                android:ems="5"
-                android:hint="12:00"
-                android:inputType="time"
-                android:textSize="30sp" />
+                android:layout_height="wrap_content"
+                android:timePickerMode="spinner"
+                />
 
             <Button
                 android:id="@+id/agregarBtn"
@@ -161,6 +157,11 @@
             android:layout_weight="0"
             android:gravity="center_horizontal"
             android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/RecyclerView_hora"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <FrameLayout
                 android:layout_width="match_parent"
