--- a/app/src/main/res/layout/alta_medicamentos.xml
+++ b/app/src/main/res/layout/alta_medicamentos.xml
@@ -148,7 +148,6 @@
                 android:text="Agregar"
                 android:textColorHighlight="#3F51B5"
                 android:textColorLink="#3F51B5" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -163,7 +162,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <FrameLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -176,7 +175,7 @@
                     android:backgroundTint="#4CAF50"
                     android:text="Guardar"
                     android:textSize="20sp" />
-            </FrameLayout>
+            </RelativeLayout>
 
         </LinearLayout>
     </LinearLayout>
