--- a/app/src/main/res/layout/detalle_medicamentos.xml
+++ b/app/src/main/res/layout/detalle_medicamentos.xml
@@ -65,13 +65,27 @@
             android:textColor="#000000"
             android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/nombreDetalle"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="MEDICAMENTO1"
-            android:textColor="#FFFFFF"
-            android:textSize="40sp" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/nombreDetalle"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="MEDICAMENTO1"
+                android:textColor="#FFFFFF"
+                android:textSize="40sp" />
+
+            <ImageButton
+                android:id="@+id/delete_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="20dp"
+                android:backgroundTint="#E91E63"
+                app:srcCompat="@drawable/baseline_delete_24" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/textView4"
