--- a/app/src/main/res/layout/alta_medicamentos.xml
+++ b/app/src/main/res/layout/alta_medicamentos.xml
@@ -49,7 +49,21 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/guardarBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="#4CAF50"
+        android:text="Guardar"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
@@ -79,6 +93,7 @@
             android:ems="10"
             android:hint="Medicamento"
             android:padding="10dp" />
+
         <TextView
             android:id="@+id/textView17"
             android:layout_width="match_parent"
@@ -98,6 +113,7 @@
             android:hint="Dosis"
             android:inputType="number"
             android:padding="10dp" />
+
         <TextView
             android:id="@+id/textView15"
             android:layout_width="match_parent"
@@ -137,8 +153,7 @@
                 android:id="@+id/timePicker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:timePickerMode="spinner"
-                />
+                android:timePickerMode="spinner" />
 
             <Button
                 android:id="@+id/agregarBtn"
@@ -166,15 +181,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <Button
-                    android:id="@+id/guardarBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:layout_marginBottom="20dp"
-                    android:backgroundTint="#4CAF50"
-                    android:text="Guardar"
-                    android:textSize="20sp" />
             </RelativeLayout>
 
         </LinearLayout>
