Vuelvo a agregar dosis

--- a/app/src/main/res/layout/alta_medicamentos.xml
+++ b/app/src/main/res/layout/alta_medicamentos.xml
@@ -108,7 +108,7 @@
             android:textSize="15sp" />
 
         <EditText
-            android:id="@+id/cantidad"
+            android:id="@+id/stock"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
