--- a/app/src/main/res/layout/detalle_medicamentos.xml
+++ b/app/src/main/res/layout/detalle_medicamentos.xml
@@ -77,7 +77,7 @@
                 android:textSize="40sp" />
 
             <ImageButton
-                android:id="@+id/delete_button"
+                android:id="@+id/borrarBtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="end"
